--- a/app/src/main/res/layout/activity_chapter_detail.xml
+++ b/app/src/main/res/layout/activity_chapter_detail.xml
@@ -39,22 +39,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <FrameLayout
-        android:id="@+id/fl_video_chapter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_chapter_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp">
-
-        <VideoView
-            android:id="@+id/vw_chapter"
-            android:layout_width="match_parent"
-            android:layout_height="224dp"/>
-
-    </FrameLayout>
-
     <TextView
         android:id="@+id/tv_chapter_desc"
         android:layout_width="wrap_content"
@@ -65,8 +49,24 @@
         android:textColor="@color/black"
         android:layout_margin="16dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/fl_video_chapter"
+        app:layout_constraintTop_toBottomOf="@id/tv_chapter_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <FrameLayout
+        android:id="@+id/fl_video_chapter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_chapter_desc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp">
+
+        <VideoView
+            android:id="@+id/vw_chapter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
