--- a/app/src/main/res/layout/list_quiz_history_item.xml
+++ b/app/src/main/res/layout/list_quiz_history_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp"
+    android:layout_margin="16dp"
     app:cardCornerRadius="16dp"
-    android:layout_margin="8dp"
+    app:cardElevation="4dp"
+    android:padding="8dp"
     android:backgroundTint="@color/light">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_margin="8dp">
 
         <ImageView
             android:layout_width="50dp"
@@ -21,7 +23,7 @@
             android:layout_gravity="center"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -59,29 +61,18 @@
                     android:textColor="@color/black"/>
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/date_completed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="18/10/2025"
-                android:fontFamily="@font/nunito_reguler"
-                android:layout_gravity="start"
-                android:layout_margin="8dp"
-                android:layout_marginHorizontal="8dp"/>
-
         </LinearLayout>
 
         <Button
             android:id="@+id/btnDelete"
             style="?attr/materialIconButtonFilledTonalStyle"
-            android:layout_width="60dp"
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="start|center"
-            android:layout_marginStart="100dp"
+            android:layout_gravity="center|start"
+            android:layout_margin="16dp"
+            android:padding="14dp"
             android:backgroundTint="@color/dark"
             android:contentDescription="Delete"
-            android:gravity="start"
             app:icon="@drawable/baseline_delete_24" />
 
     </LinearLayout>
