--- a/app/src/main/res/layout/activity_chapter_detail.xml
+++ b/app/src/main/res/layout/activity_chapter_detail.xml
@@ -26,47 +26,13 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tv_chapter_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bab 1"
-        android:textSize="24sp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:textColor="@color/black"
-        android:layout_margin="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_chapter_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bilangan Bulat"
-        android:fontFamily="@font/nunito_bold"
-        android:textSize="24sp"
-        android:textColor="@color/black"
-        android:layout_margin="16dp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/tv_chapter_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <FrameLayout
-        android:id="@+id/fl_video_chapter"
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_chapter_desc"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp">
-
-        <VideoView
-            android:id="@+id/vw_chapter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </FrameLayout>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
