--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,15 +3,15 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/baseline_home_24"
+        android:icon="@drawable/home"
         android:title="Beranda" />
     <item
         android:id="@+id/navigation_history"
-        android:icon="@drawable/baseline_history_24"
+        android:icon="@drawable/history"
         android:title="Riwayat" />
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/baseline_person_24"
+        android:icon="@drawable/user"
         android:title="Profil" />
 
 </menu>
